# compare

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  URL  compare.pc.cmake.in
.github/workflows/: release.yml
doc/: compare.3  compare.html
src/cmake/pkg/: compare-config.cmake.in
src/lib/: Makefile  cmp_mod.f90  compare.f90
src/test/: Makefile  test.f90
